--- a/templates/order_confirm.html
+++ b/templates/order_confirm.html
@@ -22,169 +22,11 @@
           </a>
         </div>
       </div>
-      <!-- __________________________ -->
-      <!-- <div class="mobile-bottom-navigation">
-        <button class="action-btn" data-mobile-menu-open-btn>
-          <ion-icon name="menu"></ion-icon>
-        </button>
-        <button class="action-btn">
-          <ion-icon name="bag"></ion-icon>
-        </button>                                               
-        <button class="action-btn">
-          <ion-icon class="person"></ion-icon>
-        </button>
-      </div> -->
-      <!-- ________________________ -->
-      <nav class="mobile-navigation-menu has-scrollbar" data-mobile-menu>
-        <div class="menu-top">
-          <h2 class="menu-title">Menu</h2>
-
-          <button class="menu-close-btn" data-mobile-menu-close-btn>
-            <ion-icon name="close-outline"></ion-icon>
-          </button>
-        </div>
-        <ul class="mobile-menu-category-list">
-          <li class="menu-category">
-            <a href="{%url 'home'%}" class="menu-title">Home</a>
-          </li>
-          <li class="menu-category">
-            <button class="accordion-menu" data-accordion-btn>
-              <p class="menu-title">Categories</p>
-              <div>
-                <ion-icon name="add-outline" class="add-icon"></ion-icon>
-                <ion-icon name="remove-outline" class="remove-icon"></ion-icon>
-              </div>
-            </button>
-
-            <ul class="submenu-category-list" data-accordion>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='MENS'%}"
-                  class="submenu-title"
-                  >Men's</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='WOMEN'%}"
-                  class="submenu-title"
-                  >Women's</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='BABY CARE'%}"
-                  class="submenu-title"
-                  >Baby Care</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Personal Hygiene'%}"
-                  class="submenu-title"
-                  >Personal Hygiene</a
-                >
-              </li>
-
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Medical Equipments' %}"
-                  class="submenu-title"
-                  >Medical Equipments</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Cold & Allergies'%}"
-                  class="submenu-title"
-                  >Cold & Allergies</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Heart Problems'%}"
-                  class="submenu-title"
-                  >Heart Problems</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Diabetes'%}"
-                  class="submenu-title"
-                  >Diabetes</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Respiratory Problems'%}"
-                  class="submenu-title"
-                  >Respiratory Problems</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Neurological Problems'%}"
-                  class="submenu-title"
-                  >Neurological Problems</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Arthritis or other types of pain'%}"
-                  class="submenu-title"
-                  >Arthritis or other types of pain</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Sexual Wellness'%}"
-                  class="submenu-title"
-                  >Sexual Wellness</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Herbal & Ayurvedic'%}"
-                  class="submenu-title"
-                  >Herbal & Ayurvedic</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Infant & Mothers care'%}"
-                  class="submenu-title"
-                  >Infant & Mothers care</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='Supplements & Nutrition'%}"
-                  class="submenu-title"
-                  >Supplements & Nutrition</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='More will be added late'%}"
-                  class="submenu-title"
-                  >More will be added late</a
-                >
-              </li>
-              <li class="submenu-category">
-                <a
-                  href="{%url 'category' p_category='More will be added late'%}"
-                  class="submenu-title"
-                  >More will be added late</a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+      
     </header>
     <main>
       <div class="container">
-        <form action="">
+        <form action="{% url 'order_confirm' %}" method="post">
           <div class="purchase-history">
             <table>
               <thead>
@@ -193,61 +35,32 @@
                 <th>Price</th>
               </thead>
               <tbody>
-                <tr>
-                  <td><li>Napa x 2</li></td>
-                  <td>
-                    <span class="quantity"> 
-                      <button class="quantity-button decrement" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'decrement', this)">-</button>
-                      <span class="quantity-value" id="quantity-1">19</span>  
-                      <button class="quantity-button increment" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'increment', this)">+</button>
-                    </span>
-                  </td>
-                  <td>200</td>
-                </tr>
-                <tr>
-                  <td><li>Napa x 2</li></td>
-                  <td>
-                    <span class="quantity"> 
-                      <button class="quantity-button decrement" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'decrement', this)">-</button>
-                      <span class="quantity-value" id="quantity-1">19</span>  
-                      <button class="quantity-button increment" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'increment', this)">+</button>
-                    </span>
-                  </td>
-                  <td>200</td>
-                </tr>
-                <tr>
-                  <td><li>Napa x 2</li></td>
-                  <td>
-                    <span class="quantity"> 
-                      <button class="quantity-button decrement" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'decrement', this)">-</button>
-                      <span class="quantity-value" id="quantity-1">19</span>  
-                      <button class="quantity-button increment" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'increment', this)">+</button>
-                    </span>
-                  </td>
-                  <td>200</td>
-                </tr>
-                <tr>
-                  <td><li>Napa x 2</li></td>
-                  <td>
-                    <span class="quantity"> 
-                      <button class="quantity-button decrement" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'decrement', this)">-</button>
-                      <span class="quantity-value" id="quantity-1">19</span>  
-                      <button class="quantity-button increment" style="display: inline; white-space: nowrap;" onclick="AddtoCart(1,19, 'increment', this)">+</button>
-                    </span>
-                  </td>
-                  <td>200</td>
-                </tr>
+                {% for product_name, quantity, price in product_data_list %}
+                  <tr>
+                    <td>{{ product_name }}</td>
+                    <td>
+                      <span class="quantity">
+                        {{ quantity }}
+                        
+                      </span>
+                    </td>
+                    <td>{{ price }}</td>
+                  </tr>
+                {% endfor %}
                 <tr style="background-color: rgb(195, 255, 139);">
                   <td colspan="2" rowspan="2">Subtotal</td>
-                  <td>800</td>
+                  <td>{{ total }}</td>
                 </tr>
               </tbody>
             </table>
-            <label for="address">Address: </label>
-            <input style="height: 60px;" type="text" name="address">
+            <label for="address">Address:</label>
+            <input style="height: 60px;" type="text" name="address" value='{{user_address}}'>
             <button class="confirm-order" type="submit">Confirm Order</button>
           </div>
         </form>
+        
+        
+        
       </div>
     </main>
 
