--- a/templates/order_confirm.html
+++ b/templates/order_confirm.html
@@ -44,9 +44,13 @@
                         
                       </span>
                     </td>
-                    <td>{{ price }}</td>
+                    <td>{{ price }} Taka</td>
                   </tr>
                 {% endfor %}
+                <tr style="background-color: rgb(195, 255, 139);">
+                  <td colspan="2" rowspan="1">Delivery Charge</td>
+                  <td >60 Taka</td>
+                </tr>
                 <tr style="background-color: rgb(195, 255, 139);">
                   <td colspan="2" rowspan="2">Subtotal</td>
                   <td>{{ total }}</td>
@@ -79,7 +83,5 @@
     ></script>
     <script type="text/javascript" src="{% static 'script.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'search.js' %}"></script>
-    <script src="{% static 'cart.js' %}"></script>
   </body>
 </html>
