--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -12,6 +12,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -31,59 +33,63 @@
 				</button>
 				<div class="header-user-actions">
 					<div class="search-box">
-						<input class="search-txt" type="text" placeholder="Type to search...">
+						<input class="search-txt" id="search-input2" type="text" placeholder="Type to search...">
 						<button class="mobile-srch-btn action-btn">
 							<ion-icon name="search-outline"></ion-icon>
 						</button>
+						<div id="search-results2">
+
+					
+						</div>
 					</div>
 					<button id="select-image" class="action-btn">
 						<img src="{%static 'prescription.png'%}" alt="prescription-upload-icon" width="30">
 					</button>
-					<button id="user-login-btn" class="action-btn">
+					<button id="user-login-btn" class="action-btn" >
 						<ion-icon name="person-outline"></ion-icon>
 					</button>
-					<button id="cart-btn" class="action-btn">
+
+
+					<button id="cart-btn" class="action-btn" >
 						<ion-icon name="bag-outline"></ion-icon>
 						<span class="btn-badge">3</span>
 					</button>
-					<div class="shopping-cart" >
-						<!-- HTML template for a product cartbox -->
-						<div id= "cart-container">
+						<div class="shopping-cart" >
 
-							
-							<!-- <div class="cartbox" id="cartbox-${p_id}">
-							  <button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							  </button>
-							  <img src="" alt="">
-							  <div class="cart-content">
-								<h3 id="productName-${p_id}"></h3>
-								<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
-								  <span class="cart-content-price" id="productPrice-${p_id}"></span>
-								  <span class="quantity"></span><br>
-								  <span class="quantity">Days: 7</span>
-								</div>
-							  </div>
-							</div> -->
-						  </div>
-						  
-						<div class="total">Total: ৳1460.00</div>
-					<a href="#" class="cart-checkout-btn">Checkout</a>
-					</div>
+								<!-- HTML template for a product cartbox -->
+								<div id= "cart-container">
+									<!-- <div class="cartbox" id="cartbox-${p_id}">
+									  <button class="cart-trash">
+										<ion-icon name="trash"></ion-icon>
+									  </button>
+									  <img src="" alt="">
+									  <div class="cart-content">
+										<h3 id="productName-${p_id}"></h3>
+										<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
+										  <span class="cart-content-price" id="productPrice-${p_id}"></span>
+										  <span class="quantity"></span><br>
+										  <span class="quantity">Days: 7</span>
+										</div>
+									  </div>
+									</div> -->
+								  </div>
+								  
+								  <div class="total"></div>
+								  {% if user.is_authenticated %}
+								<a  class="cart-checkout-btn" id="checkout-button">Checkout</a>
+						    {% else %}
+							<a href="{% url 'mylogin' %}" class="cart-checkout-btn" id="">Checkout</a>
+						    {% endif %}
+						</div>
 
-					<div style="text-align:center;" class="user-login">
-						{% if user.is_authenticated %}
-						<a href="{% url 'profile' %}" class="form-btn">Profile</a>
-						<a href="{% url 'mylogout' %}" class="form-btn">Logout</a>
-						{% else %}
-						<a href="{% url 'mylogin' %}" class="form-btn">Login</a>
-						{% endif %}
-					
-
-				
-						
-
-					</div>
+						<div style="text-align:center;" class="user-login">
+							{% if user.is_authenticated %}
+							<a href="{% url 'profile' %}" class="form-btn">Profile</a>
+							<a href="{% url 'mylogout' %}" class="form-btn">Logout</a>
+						    {% else %}
+							<a href="{% url 'mylogin' %}" class="form-btn">Login</a>
+						    {% endif %}
+						</div>
 				</div>
 			</div>
 		</div>
@@ -536,7 +542,7 @@
 	<a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
 		<ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
 	</a>
+	<script type="text/javascript" src="{% static 'cart.js' %}"></script>
     <script type="text/javascript" src="{% static 'user-profile.js' %}"></script>
-	<script src="{% static 'cart.js' %}"></script>
 </body>
 </html> 
