--- a/static/user-profile.css
+++ b/static/user-profile.css
@@ -871,6 +871,10 @@ main .container .registration-form.active {
 	font-size: var(--fs-3);
 }
 
+/* ------------------------ */
+/* PURCHASE HISTORY */
+/* ------------------------ */
+
 .purchase-history {
 	display: none;
 }
@@ -953,6 +957,152 @@ main .container .registration-form.active {
 	text-align: center;
 }
 
+/* ------------------------ */
+/* MY LIST */
+/* ------------------------ */
+
+.list {
+	display: none;
+}
+
+.list.active {
+	display: block;
+}
+
+.list table {
+	width: 100%;
+	border-collapse: collapse;
+	background-color: white;
+	text-align: center;
+	border-radius: 10px;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	padding: 10px 20px;
+	overflow: hidden;
+}
+
+
+.list table thead {
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.list table th {
+	color: rgba(222, 0, 0, 0.7);
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
+	font-size: var(--fs-6);
+	font-weight: 700;
+	padding: 1rem 2rem;
+}
+.list table tr:nth-child(even) {
+	background-color: rgba(222, 0, 0, 0.05);
+}
+
+.list table tbody {
+	display: table-row-group;
+	margin-top: 100px;
+}
+.list table tbody a {
+	text-decoration: none;
+}
+
+.list table td {
+	font-weight: 500;
+	padding: 1rem 0;
+	text-align: center;
+}
+
+.mylist-times input[type="checkbox"] {
+	position: relative;
+    display: grid;
+	appearance: none;
+	background-color: rgb(223, 223, 223);
+	border-radius: 100%;
+	width: 20px;
+	height: 20px;
+	cursor: pointer;
+	line-height: 16px;
+}
+.mylist-times input[type="checkbox"]:checked:after {
+	position: absolute;
+	content: '\25CF';
+	font-size: 30px;
+	color: var(--red);
+	left: 50%;
+	transform: translate(-50%, 0);
+}
+
+.mylist-times div {
+	/* width: 100%; */
+	display: flex;
+	justify-content: space-between;
+}
+
+.quantity-container {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.quantity {
+	width: 200px;
+	height: 60px;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.quantity input {
+	width: 100%;
+	border: none;
+	outline: none;
+	background-color: transparent;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+.quantity button:nth-child(1) {
+	height: 100%;
+	width: 100%;
+    border-bottom-left-radius: 12px;
+    border-top-left-radius: 12px;
+}
+.quantity button:nth-child(3) {
+	height: 100%;
+	width: 100%;
+    border-bottom-right-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.quantity button:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+
+
+.quantity button.num {
+    font-size: 1.2rem;
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
+    border-left: 2px solid rgba(0, 0, 0, 0.2);
+    pointer-events: none;
+}
+
+.quick-order {
+	width: 15rem;
+	float: right;
+	margin-top: 10px;
+	background-color: var(--red);
+	font-size: 1.2rem;
+	padding: 15px 10px;
+	color: white;
+	font-weight: 600;
+	border-radius: 10px;
+	z-index: 2;
+	transition: 0.2s ease;
+}
 
 /* ------------------------ */
 /* FOOTER */
