Profile List Almost (No update Feature)

--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -80,7 +80,7 @@
 							</div> -->
 						  </div>
 						  
-						<div class="total">Total: ৳1460.00</div>
+						<div class="total"></div>
 					<a href="#" class="cart-checkout-btn">Checkout</a>
 					</div>
 
