--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -507,7 +507,7 @@
 						{% endfor %}
 					</tbody>
 				</table>
-				<button type="submit" class="quick-order">Quick Order</button>
+				<a href="{% url 'quickorder' %}" class="quick-order" id="">Quick Order</a>
 			</div>
 		</div>
 								
